--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <span>9:00 am - 4:00pm</span>
               <br />
               <a
-                href="https://wa.me/4771510019?text=Hola, me gustaría agendar una cita"
+                href="https://wa.me/+524771510019?text=Hola, me gustaría agendar una cita"
                 >477 151 0019 <img src="./img/wsp.png" width="20"/></a
               ><br />
             </p>
@@ -177,7 +177,7 @@
               <span>9:00 am - 4:00pm</span>
               <br />
               <a
-                href="https://wa.me/4771510019?text=Hola, me gustaría agendar una cita"
+                href="https://wa.me/+524771510019?text=Hola, me gustaría agendar una cita"
                 >477 679 7331 <img src="./img/wsp.png" width="20"/></a
               ><br />
             </p>
