--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           </div>
           <div class="col-md-4 footer-rightcol">
             <p>
-              Made by
+              Powered by
               <a
                 href="https://redga.io/"
                 rel="noopener noreferrer"
