--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 section-text nopadding">
+        <div class="col-md-4 section-text nopadding corporales-section">
           <div class="wp5">
             <h2 class="mech">CORPORALES</h2>
             <p>
@@ -187,7 +187,7 @@
         </div>
       </div>
     </section>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
       <div class="row">
         <div id="effect" class="effects clearfix">
           <div class="col-md-4 left nopadding">
@@ -211,7 +211,7 @@
           <div class="col-md-4 mid nopadding">
             <div class="mid-box-1 box">
               <div class="img">
-                <img src="img/l4.jpg" alt="Shop Bags" />
+                <img src="img/l9.jpeg" alt="Shop Bags" />
               </div>
             </div>
             <div class="mid-box-2 box">
@@ -240,7 +240,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <footer id="contact">
       <div class="container">
