--- a/index.html
+++ b/index.html
@@ -241,7 +241,21 @@
         </div>
       </div>
     </div> -->
-
+    <script
+      src="https://assets.juicer.io/embed.js"
+      type="text/javascript"
+    ></script>
+    <link
+      href="https://assets.juicer.io/embed.css"
+      media="all"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <ul class="juicer-feed" data-feed-id="ceci_arrieta_cosmetologia">
+      <h1 class="referral">
+        <a href="https://www.juicer.io">Powered by Juicer.io</a>
+      </h1>
+    </ul>
     <footer id="contact">
       <div class="container">
         <div class="row">
