--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h2 class="logo-header">Ceci Arrieta Punta del Este</h2>
             <p>
               <span
-                >Blvd. Alonso de Torres #4408, Local 4 & 5, Plaza Ortesa.
+                >Blvd. Juan Alonso de Torres #4408, Local 4 & 5, Plaza Ortesa.
                 Residencial Punta del Este</span
               >
               <br />
@@ -181,6 +181,35 @@
               <a
                 href="https://wa.me/+524776797331?text=Hola, me gustaría agendar una cita"
                 >477 679 7331 <img src="./img/wsp.png" width="20"/></a
+              ><br />
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="sign_up">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 sign-up">
+            <h2 class="logo-header">Ceci Arrieta Querétaro</h2>
+            <p>
+              <span>Circuito Álamos 80 Álamos 2a sección</span>
+              <br />
+              <span>Querétaro, Querétaro</span>
+              <br />
+              <strong>De Lunes a Viernes:</strong>
+              <br />
+              <span>9:00 am - 2:00pm</span>
+              <br />
+              <span>4:00 pm - 8:00pm</span>
+              <br />
+              <strong>Sábados:</strong>
+              <br />
+              <span>9:00 am - 4:00pm</span>
+              <br />
+              <a
+                href="https://wa.me/+524427996894?text=Hola, me gustaría agendar una cita"
+                >442 799 6894 <img src="./img/wsp.png" width="20"/></a
               ><br />
             </p>
           </div>
