--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
               <ul class="clearfix">
                 <li><a href="#about">Inicio</a></li>
                 <li class="dot">.</li>
-                <li><a href="#work" class="r_spacer">Servicios</a></li>
+                <li>
+                  <a href="./assets/Servicios.pdf" class="r_spacer"
+                    >Servicios</a
+                  >
+                </li>
                 <li><a href="#shop">Sucursales</a></li>
                 <li class="dot">.</li>
                 <li><a href="#contact">Contacto</a></li>
@@ -59,6 +63,10 @@
             En Ceci Arrieta Cosmetología nos especializamos en el cuidado de la
             piel de nuestros clientes, atendemos sus necesidades y fomentamos
             una diversa variedad de servicios para todo tipo de piel.
+          </p>
+          <p class="text-intro" style="padding: 0px 18px;">
+            Todos los servicios
+            <a href="./assets/Servicios.pdf" target="_blank">aquí</a>
           </p>
         </div>
       </div>
