--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
               <ul class="clearfix">
                 <li><a href="#about">Inicio</a></li>
                 <li class="dot">.</li>
-                <li>
-                  <a href="./assets/Servicios.pdf" class="r_spacer"
-                    >Servicios</a
-                  >
-                </li>
+                <li><a href="#work" class="r_spacer">Servicios</a></li>
                 <li><a href="#shop">Sucursales</a></li>
                 <li class="dot">.</li>
                 <li><a href="#contact">Contacto</a></li>
@@ -64,10 +60,6 @@
             piel de nuestros clientes, atendemos sus necesidades y fomentamos
             una diversa variedad de servicios para todo tipo de piel.
           </p>
-          <p class="text-intro" style="padding: 0px 18px;">
-            Todos los servicios
-            <a href="./assets/Servicios.pdf" target="_blank">aquí</a>
-          </p>
         </div>
       </div>
     </div>
@@ -78,11 +70,15 @@
         </div>
         <div class="col-md-4 section-text nopadding">
           <div class="wp4">
-            <h2 class="frame">FACIALES</h2>
+            <h2 class="frame">
+              <a href="./assets/Servicios.pdf" target="_blank">FACIALES</a>
+            </h2>
             <p>
-              Nuestros tratamientos faciales están diseñados para todo tipo de
-              piel y se realizan en base a un diagnóstico con el objetivo de
-              ayudarte a mantener tu piel sana y al mismo tiempo consentirte.
+              Nuestros tratamientos
+              <a href="./assets/Servicios.pdf" target="_blank" 1>faciales</a>
+              están diseñados para todo tipo de piel y se realizan en base a un
+              diagnóstico con el objetivo de ayudarte a mantener tu piel sana y
+              al mismo tiempo consentirte.
             </p>
             <div class="thin-sep"></div>
           </div>
